--- a/BombermanWeb/src/main/webapp/WEB-INF/html/consultationCompte.html
+++ b/BombermanWeb/src/main/webapp/WEB-INF/html/consultationCompte.html
@@ -1,67 +1,73 @@
 <!DOCTYPE html>
 <html>
 <link
-	href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-	rel="stylesheet" id="bootstrap-css">
+        href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        id="bootstrap-css" rel="stylesheet">
 <script
-	src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script
-	src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-<link rel="stylesheet" href="./css/connect.css">
+<link href="./css/connect.css" rel="stylesheet">
 <body>
-	<div id="register">
-		<div class="container">
-			<div id="login-row"
-				class="row justify-content-center align-items-center">
-				<div id="login-column" class="col-md-6">
-					<div id="login-box" class="col-md-12">
-						<form id="login-form" class="form" action="/bomberman/consultation" method="post">
-							</br> </br> </br>
-							<h3 class="text-center text-info">Consultation du compte :</h3>
-							</br> </br> </br>
-							<div class="form-group">
-								<label for="username" class="text-info">Username:</label> <input
-									type="text" name="username" id="username" class="form-control">
-							</div>
-							<div class="form-group">
-								<label for="password" class="text-info">Password:</label> <input
-									type="password" name="password" id="password"
-									class="form-control">
-							</div>
-							<div class="form-group">
-								<label for="password" class="text-info">Password:</label> <input
-									type="password" name="password" id="passwordverif"
-									class="form-control">
-							</div>
-							<div class="form-group">
-								<label for="mail" class="text-info">Mail:</label> <input
-									type="email" name="mail" id="mail" class="form-control">
-							</div>
-							<div class="form-group">
-								<br> <input type="submit" name="submit"
-									class="btn btn-info btn-md" value="Modifier">
-							</div>
-						</form>
-						<form id="login-form" class="form" action="/bomberman/supprimer"
-							method="post">
-							<div>
-								<br> <input type="submit" name="submit"
-									class="btn btn-danger" value="Supprimer Compte"
-									onClick='ConfirmerSupprimer()'>
-								<script language='javascript'>
-									function ConfirmerAge() {
-										if (confirm("Confirmez vous vouloir supprimer votre compte?")) {
-											formulaire.submit();
-										}
-									}
-								</script>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<div id="register">
+    <div class="container">
+        <div class="row justify-content-center align-items-center"
+             id="login-row">
+            <div class="col-md-6" id="login-column">
+                <div class="col-md-12" id="login-box">
+                    <form action="/bomberman/consultation" class="form" id="login-form" method="post">
+
+                        </br> </br> </br>
+                        <h3 class="text-center text-info">Consultation du compte :</h3>
+                        </br> </br> </br>
+
+                        <div class="alert alert-danger" role="alert" th:if="${msg_error}" th:utext="${msg_error}"></div>
+                        <div class="alert alert-success" role="alert" th:if="${msg_success}"
+
+                             th:utext="${msg_success}"></div>
+                        <div class="form-group">
+                            <label class="text-info" for="username">Username:</label> <input
+                                class="form-control" id="username" name="username" type="text">
+                        </div>
+                        <div class="form-group">
+                            <label class="text-info" for="password">Password:</label> <input
+                                class="form-control" id="password" name="password"
+                                type="password">
+                        </div>
+                        <div class="form-group">
+                            <label class="text-info" for="password">Password:</label> <input
+                                class="form-control" id="passwordverif" name="password"
+                                type="password">
+                        </div>
+                        <div class="form-group">
+                            <label class="text-info" for="mail">Mail:</label> <input
+                                class="form-control" id="mail" name="mail" type="email">
+                        </div>
+                        <div class="form-group">
+                            <br> <input class="btn btn-info btn-md" name="submit"
+                                        type="submit" value="Modifier">
+                        </div>
+                    </form>
+                    <form action="/bomberman/supprimer" class="form" id="login-form"
+                          method="post">
+                        <div>
+                            <br> <input class="btn btn-danger" name="submit"
+                                        onClick='ConfirmerSupprimer()' type="submit"
+                                        value="Supprimer Compte">
+                            <script language='javascript'>
+                                function ConfirmerAge() {
+                                    if (confirm("Confirmez vous vouloir supprimer votre compte?")) {
+                                        formulaire.submit();
+                                    }
+                                }
+                            </script>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
