--- a/BombermanWeb/src/main/webapp/WEB-INF/html/consultationCompte.html
+++ b/BombermanWeb/src/main/webapp/WEB-INF/html/consultationCompte.html
@@ -10,6 +10,25 @@
 <!------ Include the above in your HEAD tag ---------->
 <link href="./css/connect.css" rel="stylesheet">
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/bomberman/consulteCompte">Compte</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/bomberman/leaderboard">Leaderboard <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/bomberman/historique">Historique</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+
 <div id="register">
     <div class="container">
         <div class="row justify-content-center align-items-center"
