--- a/BombermanWeb/src/main/webapp/WEB-INF/html/leaderboard.html
+++ b/BombermanWeb/src/main/webapp/WEB-INF/html/leaderboard.html
@@ -5,6 +5,7 @@
 	id="bootstrap-css" rel="stylesheet">
 <script
 	src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	 <link href="assets/css/bootstrap.css" rel="stylesheet">
 <script
 	src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <head>
@@ -12,7 +13,22 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/bomberman/consulteCompte">Compte</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/bomberman/leaderboard">Leaderboard <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/bomberman/historique">Historique</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 
 	<table class="table table-striped table-dark">
