--- a/BombermanWeb/src/main/webapp/WEB-INF/html/leaderboard.html
+++ b/BombermanWeb/src/main/webapp/WEB-INF/html/leaderboard.html
@@ -26,6 +26,22 @@
       <li class="nav-item">
         <a class="nav-link" href="/bomberman/historique">Historique</a>
       </li>
+		<li class="nav-item">
+			<form action="/bomberman/deconnection" class="form" id="deconnect-form"
+				  method="post">
+				<input class="btn btn-danger" name="action"
+					   onClick='deconnectCompte()' type="submit"
+					   value="Supprimer">
+				<script language='javascript'>
+                            function deconnectCompte() {
+                                if (confirm("Confirmez vous vouloir vous deconnectez de votre compte?")) {
+                                    var form = document.getElementById("deconnect-form")
+                                    form.submit();
+                                }
+                            }
+                        </script>
+
+			</form>
     </ul>
   </div>
 </nav>
