--- a/BombermanWeb/src/main/webapp/WEB-INF/html/historique.html
+++ b/BombermanWeb/src/main/webapp/WEB-INF/html/historique.html
@@ -31,7 +31,7 @@
               method="post">
           <input class="btn btn-danger" name="action"
                  onClick='deconnectCompte()' type="submit"
-                 value="Supprimer">
+                 value="Deconnecter">
           <script language='javascript'>
                             function deconnectCompte() {
                                 if (confirm("Confirmez vous vouloir vous deconnectez de votre compte?")) {
