--- a/BombermanWeb/src/main/webapp/WEB-INF/html/connect.html
+++ b/BombermanWeb/src/main/webapp/WEB-INF/html/connect.html
@@ -9,6 +9,10 @@
         src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 <link href="./css/connect.css" rel="stylesheet">
+<head>
+    <meta charset="UTF-8">
+    <title>Bomberman Connexion</title>
+</head>
 <body>
 <div id="login">
     <div class="container">
