--- a/BombermanWeb/src/main/webapp/WEB-INF/html/historique.html
+++ b/BombermanWeb/src/main/webapp/WEB-INF/html/historique.html
@@ -10,7 +10,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Insert title here</title>
+    <title>Bomberman Historique</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
