--- a/BombermanWeb/src/main/webapp/WEB-INF/html/consultationCompte.html
+++ b/BombermanWeb/src/main/webapp/WEB-INF/html/consultationCompte.html
@@ -67,11 +67,17 @@
                              th:utext="${msg_success}"></div>
                         <div class="form-group">
                             <label class="text-info" for="username">Username:</label> <input
-                                class="form-control" id="username" name="username" type="text" placeholder=th:utext="${user.getUsername()}">
+                                class="form-control" id="username" name="username" placeholder=th:utext="${user.getUsername()}"
+                                type="text">
                         </div>
                         <div class="form-group">
                             <label class="text-info" for="password">Password:</label> <input
                                 class="form-control" id="password" name="password"
+                                type="password">
+                        </div>
+                        <div class="form-group">
+                            <label class="text-info" for="password">Password:</label> <input
+                                class="form-control" id="passwordvalid" name="passwordvalid"
                                 type="password">
                         </div>
                         <div class="form-group">
