--- a/BombermanWeb/src/main/webapp/WEB-INF/html/consultationCompte.html
+++ b/BombermanWeb/src/main/webapp/WEB-INF/html/consultationCompte.html
@@ -67,7 +67,7 @@
                              th:utext="${msg_success}"></div>
                         <div class="form-group">
                             <label class="text-info" for="username">Username:</label> <input
-                                class="form-control" id="username" name="username" placeholder=th:utext="${user.getUsername()}"
+                                class="form-control" id="username" name="username" th:value="${user.getUsername()}"
                                 type="text">
                         </div>
                         <div class="form-group">
@@ -82,7 +82,7 @@
                         </div>
                         <div class="form-group">
                             <label class="text-info" for="mail">Mail:</label> <input
-                                class="form-control" id="mail" name="mail" type="email">
+                                class="form-control" id="mail" name="mail" type="email" >
                         </div>
                         <div class="form-group">
                             <br> <input class="btn btn-info btn-md" name="action"
