--- a/BombermanWeb/src/main/webapp/WEB-INF/html/consultationCompte.html
+++ b/BombermanWeb/src/main/webapp/WEB-INF/html/consultationCompte.html
@@ -82,7 +82,7 @@
                         </div>
                         <div class="form-group">
                             <label class="text-info" for="mail">Mail:</label> <input
-                                class="form-control" id="mail" name="mail" type="email" >
+                                class="form-control" id="mail" name="mail" type="email" th:value="${user.getEmail()}" >
                         </div>
                         <div class="form-group">
                             <br> <input class="btn btn-info btn-md" name="action"
